[gd_scene load_steps=23 format=3 uid="uid://dwwuc2ouc4sd0"]

[ext_resource type="Script" path="res://scripts/level_up.gd" id="1_le5cp"]
[ext_resource type="Texture2D" uid="uid://fienp67072ln" path="res://assets/sprites/ui/level_up/level_up.png" id="2_nihxo"]
[ext_resource type="Texture2D" uid="uid://b5qt201v1f4y5" path="res://assets/sprites/ui/level_up/spr_level_up_block.png" id="3_f5vhc"]
[ext_resource type="FontFile" uid="uid://b1nohaspagshb" path="res://assets/fonts/mini.fnt" id="4_mpu5l"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ad5af"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0p4xt"]
atlas = ExtResource("2_nihxo")
region = Rect2(0, 0, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrulf"]
atlas = ExtResource("2_nihxo")
region = Rect2(112, 0, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r18t8"]
atlas = ExtResource("2_nihxo")
region = Rect2(224, 0, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlvvu"]
atlas = ExtResource("2_nihxo")
region = Rect2(336, 0, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxvwx"]
atlas = ExtResource("2_nihxo")
region = Rect2(448, 0, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tegb3"]
atlas = ExtResource("2_nihxo")
region = Rect2(560, 0, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8v6r"]
atlas = ExtResource("2_nihxo")
region = Rect2(672, 0, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx7va"]
atlas = ExtResource("2_nihxo")
region = Rect2(784, 0, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xqij"]
atlas = ExtResource("2_nihxo")
region = Rect2(896, 0, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmydv"]
atlas = ExtResource("2_nihxo")
region = Rect2(1008, 0, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w62et"]
atlas = ExtResource("2_nihxo")
region = Rect2(1120, 0, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6n8w"]
atlas = ExtResource("2_nihxo")
region = Rect2(1232, 0, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayw2v"]
atlas = ExtResource("2_nihxo")
region = Rect2(1344, 0, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wfev"]
atlas = ExtResource("2_nihxo")
region = Rect2(1456, 0, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfgmu"]
atlas = ExtResource("2_nihxo")
region = Rect2(1568, 0, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk6ih"]
atlas = ExtResource("2_nihxo")
region = Rect2(1680, 0, 112, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7j4x8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0p4xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrulf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r18t8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlvvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxvwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tegb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8v6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx7va")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xqij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmydv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w62et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6n8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayw2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wfev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfgmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk6ih")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="LevelUp" type="CanvasLayer"]
process_mode = 3
layer = 2
visible = false
script = ExtResource("1_le5cp")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.428)
offset_right = 320.0
offset_bottom = 180.0
texture = SubResource("PlaceholderTexture2D_ad5af")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(157, 56)
sprite_frames = SubResource("SpriteFrames_7j4x8")
frame = 15
frame_progress = 1.0

[node name="AnimationTimer" type="Timer" parent="."]
one_shot = true

[node name="StatIncreaseDisplay" type="TextureRect" parent="."]
offset_left = 94.0
offset_top = 93.0
offset_right = 215.0
offset_bottom = 133.0
texture = ExtResource("3_f5vhc")

[node name="HealthIncrease" type="Label" parent="StatIncreaseDisplay"]
layout_mode = 0
offset_left = 18.0
offset_top = 10.0
offset_right = 35.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("4_mpu5l")
text = "0"
horizontal_alignment = 1

[node name="StrengthIncrease" type="Label" parent="StatIncreaseDisplay"]
layout_mode = 0
offset_left = 53.0
offset_top = 10.0
offset_right = 71.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("4_mpu5l")
text = "0"
horizontal_alignment = 1

[node name="DefenseIncrease" type="Label" parent="StatIncreaseDisplay"]
layout_mode = 0
offset_left = 90.0
offset_top = 10.0
offset_right = 104.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("4_mpu5l")
text = "0"
horizontal_alignment = 1

[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
